--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
             <ul id=resultList>
             </ul>
         </aside>
+        <label for="resultList" id="showResult"></label>
+        <button id="btnResult">Save & show chart </button>
         <canvas id="productChart"></canvas>
     </main>
 
